--- a/api/BurgerBuilder/BurgerBuilder/appsettings.json
+++ b/api/BurgerBuilder/BurgerBuilder/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "MongoConnection": {
-    "ConnectionString": "mongodb://admin:abc123@localhost",
+  "MongoInfo": {
+    "ServiceName" : "mongo-db",
+    "Login": "admin",
+    "Password": "abc123",
     "Database": "burgers"
   },
-
+  
+  "ApiKey": "verysecretkey",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
